--- a/ape-x/docker-compose.yaml
+++ b/ape-x/docker-compose.yaml
@@ -1,8 +1,11 @@
 version: '3'
 services:
   dqn_breakout:
+    tty: true
     image: pytorch/pytorch:1.9.0-cuda10.2-cudnn7-runtime
-    container_name: dqn_breakout
+    container_name: apex_breakout
     volumes:
-      - "$PWD:$PWD"
+      - "$PWD:/workspace"
+    ports:
+      - "6006:6006"
     command: bash
